@@ -10,80 +10,64 @@ import org.junit.Test;
 
 public class StudentQueueTest {
 
-	public Queue<Integer> queue1;
-	public Queue<Integer> queue2;
-	public Queue<Integer> queue3;
+	public Queue<Integer> queue10;
+	public Queue<Integer> queueCheia;
+	public Queue<Integer> queueVazia;
 
 	@Before
 	public void setUp() throws QueueOverflowException {
-
 		getImplementations();
 
 		// Fila com 3 elementos não cheia.
-		queue1.enqueue(1);
-		queue1.enqueue(2);
-		queue1.enqueue(3);
+		queue10.enqueue(1);
+		queue10.enqueue(2);
+		queue10.enqueue(3);
 
 		// Fila com 2 elementos de tamanho 2. Fila cheia.
-		queue2.enqueue(1);
-		queue2.enqueue(2);
-
+		queueCheia.enqueue(1);
+		queueCheia.enqueue(2);
 	}
 
 	private void getImplementations() {
-		// TODO O aluno deve ajustar aqui para instanciar sua implementação
-		queue1 = null;
-		queue2 = null;
-		queue3 = null;
+		queue10 = new QueueImpl<>(10);
+		queueCheia = new QueueImpl<>(2);
+		queueVazia = new QueueImpl<>(10);
 	}
 
 	// MÉTODOS DE TESTE
 	@Test
 	public void testHead() {
-		assertEquals(new Integer(1), queue1.head());
+		assertEquals(Integer.valueOf(1), queue10.head());
 	}
 
 	@Test
 	public void testIsEmpty() {
-		assertFalse(queue1.isEmpty());
-		assertTrue(queue3.isEmpty());
+		assertFalse(queue10.isEmpty());
+		assertTrue(queueVazia.isEmpty());
 	}
 
 	@Test
 	public void testIsFull() {
-		assertFalse(queue1.isFull());
+		assertFalse(queue10.isFull());
 	}
 
 	@Test
-	public void testEnqueue() {
-		try {
-			queue1.enqueue(new Integer(5));
-		} catch (QueueOverflowException e) {
-			// TODO Auto-generated catch block
-			e.printStackTrace();
-		}
+	public void testEnqueue() throws QueueOverflowException {
+		queue10.enqueue(Integer.valueOf(5));
 	}
 
 	@Test(expected = QueueOverflowException.class)
 	public void testEnqueueComErro() throws QueueOverflowException {
-		queue1.enqueue(new Integer(5)); // vai depender do tamanho que a fila
-										// foi iniciada!!!
+		queueCheia.enqueue(Integer.valueOf(5));
 	}
 
 	@Test
-	public void testDequeue() {
-		try {
-			assertEquals(new Integer(1), queue1.dequeue());
-		} catch (QueueUnderflowException e) {
-			// TODO Auto-generated catch block
-			e.printStackTrace();
-		}
+	public void testDequeue() throws QueueUnderflowException {
+		assertEquals(Integer.valueOf(1), queue10.dequeue());
 	}
 
 	@Test(expected = QueueUnderflowException.class)
 	public void testDequeueComErro() throws QueueUnderflowException {
-		assertEquals(new Integer(1), queue1.dequeue()); // vai depender do
-														// tamanho que a fial
-														// foi iniciada!!!
+		assertEquals(Integer.valueOf(1), queueVazia.dequeue()); 
 	}
 }
